--- a/ll ipba..html
+++ b/ll ipba..html
@@ -68,9 +68,9 @@
                         <h2>Branding</h2><BR>
 						<img src="https://media.discordapp.net/attachments/809352332332498995/1052177616465047552/tenryouuu.png" alt="Logo">
 						<h2>Intro Video</h2><BR><BR>
-						<video control>
-						<source src="https://youtu.be/yPHI-wIv-Fk" type="video/mp4">
-						</video> 
+						<iframe width="420" height="315"
+						src="https://youtu.be/yPHI-wIv-Fk">
+						</iframe>
 					    <h5>Link: https://www.youtube.com/watch?v=yPHI-wIv-Fk</h5>
 					</div>
                 </div>
