--- a/ll ipba..html
+++ b/ll ipba..html
@@ -69,7 +69,7 @@
 						<img src="https://media.discordapp.net/attachments/809352332332498995/1052177616465047552/tenryouuu.png" alt="Logo">
 						<h2>Intro Video</h2><BR><BR>
 						<iframe width="420" height="315"
-						src="https://youtu.be/yPHI-wIv-Fk">
+						src="https://www.youtube.com/embed/yPHI-wIv-Fk">
 						</iframe>
 					    <h5>Link: https://www.youtube.com/watch?v=yPHI-wIv-Fk</h5>
 					</div>
