--- a/ll ipba..html
+++ b/ll ipba..html
@@ -78,9 +78,14 @@
 						<iframe width="560" height="315" src="https://www.youtube.com/embed/yPHI-wIv-Fk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 						<h2>1st Video</h2>
 			    			<iframe width="560" height="315" src="https://www.youtube.com/embed/n95lqq_AjRA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+			    			<h2>2nd Video</h2>
+			    			<iframe width="560" height="315" src="https://www.youtube.com/embed/1fXFQdgkIZM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 					   <br>
 			    		   <br>
 						<h2>Testimonial</h2>
+			    			Our youtube journey was for sure a like a ferris wheel, since we were really struggling at first and don't really know anything about making a channel.<br>
+			    			But now we feel proud of ourselves since we were able to publish 3 videos in total. We also got to help and entertain gamers and newbies out there<br>
+			    			who want to know more about the gaming, the gaming community, and how to be a friendly and healthy gamer.
 					</div>
                 </div>
             </div>
